// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - TasksList When there are tasks renders correctly 1`] = `
Array [
  <header
    color="paper"
    shape="rounded"
    type="menu"
  >
    <AvatarHeader
      newbieId="1234"
      taskProgress={0}
    />
  </header>,
  <main
    className="MuiBox-root MuiBox-root-9"
    data-testid="task-list-page"
  >
    <TaskTabsContent
      loading={true}
      onChange={[Function]}
    />
  </main>,
]
`;

exports[`Component - TasksList When there are tasks renders correctly 2`] = `
Array [
  <header
    color="paper"
    shape="rounded"
    type="menu"
  >
    <AvatarHeader
      newbieId="1234"
      taskProgress={0}
    />
  </header>,
  <main
    className="MuiBox-root MuiBox-root-9"
    data-testid="task-list-page"
  >
    <TaskTabsContent
      loading={false}
      onChange={[Function]}
    />
  </main>,
]
`;

exports[`Component - TasksList when there are not tasks should render empty state 1`] = `
Array [
  <header
    color="paper"
    shape="rounded"
    type="menu"
  >
    <AvatarHeader
      newbieId="1234"
      taskProgress={0}
    />
  </header>,
  <main
    className="MuiBox-root MuiBox-root-10"
    data-testid="task-list-page"
  >
    <TaskTabsContent
      loading={false}
      onChange={[Function]}
    />
  </main>,
]
`;
